separated todo and admin api
